<resources>
    <string name="AdvancedOptions">Advanced Options</string>
    <string name="Asc2Log">Asc2Log</string>
    <string name="BasicTools">Basic Tools</string>
    <string name="Baudrate">Baudrate</string>
    <string name="BaudrateValue">200000</string>
    <string name="Browse">Browse</string>
    <string name="CanDump">CanDump</string>
    <string name="CanGen">CanGen</string>
    <string name="CanLogPath">/root/candump/dump.log</string>
    <string name="CanPlayer">CanPlayer</string>
    <string name="CanSend">CanSend</string>
    <string name="CanSniffer">CanSniffer</string>
    <string name="CanSpeed">CAN Speed</string>
    <string name="CanSpeedValue">500000</string>
    <string name="CanUSB">CAN-USB</string>
    <string name="CandumpFormat">CanDump Format</string>
    <string name="Cannelloni">Cannelloni</string>
    <string name="CaringCaribou">Caring Caribou</string>
    <string name="Check">Check</string>
    <string name="Configuration">Configuration</string>
    <string name="Counter">Counter</string>
    <string name="CustomCommand">Custom Command</string>
    <string name="CustomCommandValue">canbusload can0@100000 -r -t -b -c</string>
    <string name="Data">Data</string>
    <string name="DataValue">Data (e.g., 0C1A2F3E0C1A2F3)</string>
    <string name="Debug">Debug</string>
    <string name="Delay">Delay</string>
    <string name="DelayValue">1</string>
    <string name="DiagTest">DiagTest</string>
    <string name="Dst">Dst.</string>
    <string name="DstValue">0x3e9</string>
    <string name="Dump">Dump</string>
    <string name="File">File</string>
    <string name="Freediag">Freediag</string>
    <string name="ID">ID</string>
    <string name="IDValue">0x003</string>
    <string name="Input">Input</string>
    <string name="InstallAndUpdateButtonText">Install &amp; Update</string>
    <string name="Interactive">Interactive</string>
    <string name="Interface">Interface</string>
    <string name="LPORT">LPORT</string>
    <string name="Length">Length</string>
    <string name="LengthValue">0x4800</string>
    <string name="Listener">Listener</string>
    <string name="LocalLoopback">Local Loopback</string>
    <string name="Log2Asc">Log2Asc</string>
    <string name="LongPress">🟧 = Long press to edit command</string>
    <string name="Loop">Loop</string>
    <string name="MTU">MTU</string>
    <string name="MainMenu">Main Menu</string>
    <string name="MaintainChrootInTerminal">Add Metapackages</string>
    <string name="Max">Max.</string>
    <string name="Maximum">Maximum</string>
    <string name="MaximumValue">5</string>
    <string name="Message">Message</string>
    <string name="MessageValue">0x7a0#c0.ff.ee.00.11.22.33.44</string>
    <string name="Min">Min.</string>
    <string name="Minimum">Minimum</string>
    <string name="MinimumValue">2</string>
    <string name="Mode">Mode</string>
    <string name="Modules">Modules</string>
    <string name="Output">Output</string>
    <string name="PORTValue">1234</string>
    <string name="Pad">Pad</string>
    <string name="RHOST">RHOST</string>
    <string name="RHOSTValue">192.168.1.42</string>
    <string name="RPORT">RPORT</string>
    <string name="Refresh">Refresh USB</string>
    <string name="Reverse">Reverse</string>
    <string name="RfcommBind">rfcomm bind</string>
    <string name="RfcommConnect">rfcomm connect</string>
    <string name="Run">Run</string>
    <string name="Seed">Seed</string>
    <string name="SeedValue">0xabc123</string>
    <string name="SeparateLine">Separate Line</string>
    <string name="SeparateLineValue">5</string>
    <string name="Sequence">Sequence</string>
    <string name="SequenceFinder">Seq.Finder</string>
    <string name="SequenceValue">01a#11223344AABBCCDD</string>
    <string name="Services">Services</string>
    <string name="Show">Show</string>
    <string name="Sleep">Sleep</string>
    <string name="SleepMS">Sleep (ms)</string>
    <string name="Src">Src.</string>
    <string name="SrcValue">0x3e8</string>
    <string name="Start">Start</string>
    <string name="StartAddress">Start Address</string>
    <string name="StartAddressValue">0x1fffb000</string>
    <string name="Stop">Stop</string>
    <string name="TwoMACDigits">XX</string>
    <string name="UDSimConfigFile">UDSim Config File</string>
    <string name="UDSimConfigPath">/opt/car_hacking/udsim_vcan_config</string>
    <string name="Verbose">Verbose</string>
    <string name="VinInfo">VIN Info</string>
    <string name="VinNumber">4F2CU08102KM50866</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_carsenal">About CARsenal</string>
    <string name="about_text">" Found a bug? A suggestion? Follow me on my networks and let me know!&lt;br>&lt;br> &lt;b>Made with ♥️ by &lt;a href=https://linktr.ee/v0lk3n>V0lk3n&lt;/a>&lt;/b> "</string>
    <string name="aboutchroot">"This is Chroot Manager for Kali. The \"chroot\" is a full installation of Kali Linux that shares processing, networking, storage, and other resources with Android. It resides in your internal app storage area and is required to have at least 8 Gb free space for the minimal or full installation, just to make sure it won't break your system."</string>
    <string name="action_debug">kex_debug_title</string>
    <string name="add">Add</string>
    <string name="add_command">Add Command</string>
    <string name="add_lauchner_btn_command">Command:</string>
    <string name="add_lauchner_btn_label">Label:</string>
    <string name="admin">UAC Bypass</string>
    <string name="advancedOptionsSwitchText">Advanced Options</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">NetHunter</string>
    <string name="app_nav_home_label">NetHunter</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attack_launched">Attack launched!</string>
    <string name="audio_about_module">ABOUT MODULE</string>
    <string name="audio_audio_control">Audio Control</string>
    <string name="audio_clear_logs">Clear logs</string>
    <string name="audio_description">This module allow Chroot audio playback to Android environment over local server, ensuring seamless playback of HQ-Audio output through the main speakers.</string>
    <string name="audio_host_hint">Host</string>
    <string name="audio_logs">LOGS</string>
    <string name="audio_port_text">8000</string>
    <string name="audio_portinput">8000</string>
    <string name="audio_server_host_text">127.0.0.1</string>
    <string name="audio_serverinput">127.0.0.1</string>
    <string name="audio_service_not_bound">Service not bound. Please try again.</string>
    <string name="audio_service_not_connected">Service not connected yet. Please wait.</string>
    <string name="audio_settings">AUDIO SETTINGS</string>
    <string name="audio_text_port_hint">Port</string>
    <string name="auto_start">Auto Start</string>
    <string name="autorunningscripts">NetHunter: auto-running startup scripts</string>
    <string name="badusb_description">"This is our implementation of the BadUSB attack as demonstrated at Black Hat USA 2014. Enabling this USB gadget mode will allow your device to act as a USB network interface when plugged into a target computer. Connecting the USB cable to a PC will force all traffic from that PC (Windows or Linux) through the NetHunter device, where the traffic can be MITM'ed."</string>
    <string name="badusb_label">BadUSB MITM Attack</string>
    <string name="baudspeed">Baud Speed</string>
    <string name="baudspeedValue">115200</string>
    <string name="bdfproxy_cfg">The configuration file for BDFProxy.</string>
    <string name="boot_notification_channel">Boot</string>
    <string name="boot_notification_channel_description">Notification for run at boot services</string>
    <string name="bootanimation_path_not_found">Bootanimation path not found</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bssid">BSSID</string>
    <string name="bt_badbt">Inspired by the Mr.Robot police car scene and the Flipper XFW Team, you can now create a Bluetooth keyboard server and send keystrokes straight from NetHunter. You may need to run setup again from the top right menu to install BadBT. Running this on a smartwatch against your paired phone may despair your watch from phone/wearos app. Prefixes are experimental.</string>
    <string name="bt_badbt_string_fakeupdate">iexplore -k http://fakeupdate.net/win10ue</string>
    <string name="bt_badbt_string_rickroll">https://www.youtube.com/watch?v=dQw4w9WgXcQ</string>
    <string name="bt_carwhisperer">Carwhisperer script from the way back. Listen to, or inject audio to various devices like speakers, headsets, watches or even cars. Carwshisperer is not supported by internal bluetooth (VHCI or bt_smd) yet.</string>
    <string name="btn_waiting">Waiting…</string>
    <string name="build_version">1.0</string>
    <string name="builderinfo">IamCOD3X</string>
    <string name="can0">can0</string>
    <string name="can_description">Configure your CAN interfaces and decode your VIN identification number.</string>
    <string name="hlcand">hlcand</string>
    <string name="input_buffer_headroom">Buffer headroom</string>
    <string name="input_target_latency">Target latency</string>
    <string name="ldattach">ldattach</string>
    <string name="moduleInfo">Module Based on PulseDroid by dront78</string>
    <string name="slcan_attach">slcan_attach</string>
    <string name="slcand">slcand</string>
    <string name="socketcand">socketcand</string>
    <string name="space">" "</string>
</resources>