<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/fullScrollView" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" app:cardCornerRadius="12.0dip" app:cardElevation="4.0dip">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@android:color/holo_orange_light" android:gravity="center_vertical" android:id="@id/audioSettingsHeader" android:padding="12.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/audio_settings" android:drawableEnd="@drawable/ic_expand_more" />
                <LinearLayout android:orientation="vertical" android:id="@id/audioSettingsContent" android:padding="12.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <com.google.android.material.checkbox.MaterialCheckBox android:id="@id/auto_start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/auto_start" />
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip">
                        <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/input_buffer_headroom" android:layout_weight="0.5" />
                        <Spinner android:id="@id/bufferHeadroomSpinner" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.5" />
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/input_target_latency" android:layout_weight="0.5" />
                        <Spinner android:id="@id/targetLatencySpinner" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.5" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" app:cardCornerRadius="12.0dip" app:cardElevation="4.0dip">
            <LinearLayout android:orientation="vertical" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@android:color/holo_orange_light" android:gravity="center" android:id="@id/audio_buttons_title" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/audio_audio_control" />
                <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/audio_host_hint" app:boxBackgroundColor="@color/transparent" app:boxStrokeColor="@color/ifc_box_stroke" app:hintTextColor="@color/ifc_hint_text">
                    <com.google.android.material.textfield.TextInputEditText android:id="@id/EditTextServer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/audio_server_host_text" android:inputType="textUri" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/audio_text_port_hint" app:boxBackgroundColor="@color/transparent" app:boxStrokeColor="@color/ifc_box_stroke" app:hintTextColor="@color/ifc_hint_text">
                    <com.google.android.material.textfield.TextInputEditText android:id="@id/EditTextPort" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/audio_port_text" android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.button.MaterialButton android:textColor="@android:color/holo_orange_light" android:id="@id/ButtonPlay" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/btn_waiting" style="@style/Widget.Material3.Button.Outlined" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" app:cardCornerRadius="12.0dip" app:cardElevation="4.0dip">
            <LinearLayout android:orientation="vertical" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@android:color/holo_orange_light" android:gravity="center" android:id="@id/title2" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/audio_logs" />
                <androidx.core.widget.NestedScrollView android:background="@drawable/background" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="200.0dip" android:elevation="2.0dip">
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="15.0sp" android:textColor="#ffd50000" android:id="@id/errorText" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>
                <com.google.android.material.button.MaterialButton android:textColor="@android:color/holo_orange_light" android:id="@id/clearLogsButton" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/audio_clear_logs" style="@style/Widget.Material3.Button.Outlined" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" app:cardCornerRadius="12.0dip" app:cardElevation="4.0dip">
            <LinearLayout android:orientation="vertical" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@android:color/holo_orange_light" android:gravity="center" android:id="@id/title3" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/audio_about_module" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip">
                    <TextView android:textAppearance="@style/TextAppearance.VersionInfo" android:id="@id/builderinfoLabel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/builderinfo" android:layout_weight="1.0" />
                    <TextView android:textAppearance="@style/TextAppearance.VersionInfo" android:id="@id/buildVersionLabel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/build_version" android:layout_weight="1.0" />
                </LinearLayout>
                <TextView android:textAppearance="@style/TextAppearance.VersionInfo" android:ellipsize="end" android:id="@id/moduleInfoLabel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:text="@string/moduleInfo" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>
